// Copyright (c) The Libra Core Contributors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package network;

import "transaction.proto";

// The request for submitting a transaction to an upstream validator or full node.
message AdmissionControlMsg {
  oneof message {
    SubmitTransactionRequest submit_transaction_request = 1;
    SubmitTransactionResponse submit_transaction_response = 2;
  }
}

message SubmitTransactionRequest {
  // Transaction signed by wallet.
  types.SignedTransaction signed_txn = 1;
}

// AC response status containing code and optionally an error message.
message AdmissionControlStatus {
  AdmissionControlStatusCode code = 1;
  string message = 2;
}

// Statuses that are possible from an AC receiving a transaction
enum AdmissionControlStatusCode {
  // Validator accepted the transaction.
  Accepted = 0;
  // The sender is blacklisted.
  Blacklisted = 1;
  // The transaction is rejected, e.g. due to incorrect signature.
  Rejected = 2;
}

message SubmitTransactionResponse {
  // AC response status containing code and optionally an error message.
  AdmissionControlStatus ac_status = 1;
}
